main/default/objects/pharos__RuleFilter__c/pharos__RuleFilter__c.object-meta.xml
<CustomObject>
    <label>Rule Filter</label>
    <nameField>
        <displayFormat>RF-{0000000}</displayFormat>
        <label>Rule Filter Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rule Filters</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>