main/default/objects/pharos__RuleFilter__c/fields/pharos__Field_Type__c.field-meta.xml
<CustomField>
    <fullName>pharos__Field_Type__c</fullName>
    <label>Field Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>