main/default/objects/pharos__RuleFilter__c/fields/pharos__FieldName__c.field-meta.xml
<CustomField>
    <fullName>pharos__FieldName__c</fullName>
    <label>Field Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>