main/default/objects/pharos__RuleFilter__c/fields/pharos__Is_Old__c.field-meta.xml
<CustomField>
    <fullName>pharos__Is_Old__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Old</label>
    <type>Checkbox</type>
</CustomField>