main/default/objects/pharos__RuleFilter__c/fields/pharos__Rule__c.field-meta.xml
<CustomField>
    <fullName>pharos__Rule__c</fullName>
    <label>Rule</label>
    <referenceTo>pharos__Rule__c</referenceTo>
    <relationshipLabel>Rule Filters</relationshipLabel>
    <relationshipName>RuleFilters</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>