main/default/objects/pharos__RuleFilter__c/fields/pharos__Value__c.field-meta.xml
<CustomField>
    <fullName>pharos__Value__c</fullName>
    <label>Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>